# ImageXpress_converter

./: .gitignore  ImageXpressConverter.py  ImageXpressConverterCL.py  README.md  main.py  main.spec  main_ui.py  parse_metadata.groovy  pyproject.toml  requirements.txt  tiffwrite_luts_example.py
ImageXpress/: processfolder.py
microxpress/: __init__.py  processfolder.py
src/ImageXpress/: __init__.py  processfolder.py
ui/: __init__.py  mainwindow.py  mainwindow.ui  readme.md
