[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ImageXpressConverter"
version = "1.2.1"
description = "Combine seperate .tif files from the ImageXpress"
readme = "README.md"
authors = [{ name = "Rolf Harkes", email = "r.harkes@nki.nl" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ImageXpress"]
dependencies = ["tifffile", "numpy", "PyQt6"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "bumpver", "pytest", "mypy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.mypy]
python_version = '3.12'
mypy_path = "src"
packages = "ImageXpress"
strict = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311']

[tool.bumpver]
current_version = "1.2.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/ImageXpress/version.py" = [
    "{version}"
]